--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "google": "^2.1.0",
+    "googleapis": "^131.0.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
