--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "google": "^2.1.0",
     "googleapis": "^131.0.0",
     "next": "14.0.4",
+    "nodemailer": "^6.9.8",
     "react": "^18",
     "react-dom": "^18"
   },
