--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@vercel/blob": "^0.20.0",
+    "framer-motion": "^11.0.25",
     "google": "^2.1.0",
     "googleapis": "^131.0.0",
     "next": "14.0.4",
